 * Enh #3300: Add global defaults for priotity and severity of new bugs.
 * Enh #3302: Add global defaults for view state.
 * Enh #3505: Add a Bugnote to a resolved bug.
 * Enh #3519: Advanced filtering with multiple selections.
 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
 * Enh #3663: Remember filter settings for each project.
 * Enh #3676: Use status threshold rather than hide resolved/closed in filter.
 * Enh #3688: Add threshold for changing the bug/bugnote view status.
 * Enh #3690: Request for directly setting reminders private.
 * Enh #3713: Allow users to set severity levels along with email preferences.
 * Enh #3735: New CSS class for HTML Form Buttons
 * Enh #3765: Change title on bug details page to bug summary line.
 * Enh #3801: Add "myself" meta filter options.
 * Enh #3808: Ability to sponsor (fund) a bug or feature request.
 * Enh #3811: Allow private flag to be unset on resolved bugs.
 * Enh #3867: Give the user control whether to open hyperlink in new or current window.
 * Fix #3094: Switching projects clears filter values.
 * Fix #3159: Allow case of user name to be changed. Also fixed bug where database error was displayed when trying to create user "TeSt" when user "Test" already exists.
 * Fix #3397: Delete notification should be off when deleting a project.
 * Fix #3473: g_bug_resolved_status_threshold variable ignored.
 * Fix #3504: project cookie not cleared at logout
 * Fix #3567: Reminders can be added for a readonly bug.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * Fix #3781: Fixed external URL in admin/check.php